<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.pucaedsiii</groupId>
    <artifactId>pucminas-cc-2026-ti3-g02-tp1</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>PUC Minas - AEDS III - TP 1</name>
    <description>Trabalho Prático 1 - AEDS III</description>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.github.wosherco</groupId>
            <artifactId>jnanoid-enhanced</artifactId>
            <version>main-SNAPSHOT</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
    <build>
        <sourceDirectory>.</sourceDirectory> 
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>11</release> 
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>